[feature] finished schedule get by roles
